--- a/Templates/Political Demographic Layout.html
+++ b/Templates/Political Demographic Layout.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body id="bootstrap-overrides" {% if active_page == "Political Demographic Intro" %} id = "a"{% endif %} {% if active_page == "gal_lit" %} id = "b"{% endif %} {% if active_page == "atm_torr" %} id = "c"{% endif %}>>
+<body id="bootstrap-overrides" {% if active_page == "Political Demographic Intro" %} id = "a"{% endif %} {% if active_page == "gal_lit" %} id = "b"{% endif %} {% if active_page == "atm_torr" %} id = "c"{% endif %}>
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
