Fixed Title name

--- a/Templates/Political_Demographic_Intro.html
+++ b/Templates/Political_Demographic_Intro.html
@@ -2,7 +2,7 @@
 
 {% set active_page = "Political_Demographic_Intro"%}
 
-{% block title %}CORGIS Data set{% endblock %}
+{% block title %}CORGIS Dataset Home{% endblock %}
 
 {% block content %}
 <form action='/'>
