--- a/templates/Political_Demographic_Layout.html
+++ b/templates/Political_Demographic_Layout.html
@@ -21,7 +21,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">CORGIS Data Set</a>
+      <a class="navbar-brand" href="#">CORGIS Dataset - County Primary Elections</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
