--- a/templates/Political_Demographic_Intro.html
+++ b/templates/Political_Demographic_Intro.html
@@ -6,34 +6,35 @@
 
 {% block content %}
 <form action='/'>
-<div id=content>
-  <p>
-    <b>Description:</b> Every four years in the United States comes along a new general election where a president is elected.
-    During that process primaries and caucases are held to determine what candidate is chosen per major party.
-    This data set shows how each county in America voted for each candidate from both parties.
-    These votes come from both priamries and caucases. All the data used comes from the <a href="https://corgis-edu.github.io/corgis/json/election/">CORGIS Dataset</a>.
-  </p>
-  <ol>
-    <li>Why do the percentages of each county not equal 100%?</li>
-    <ul>
-      <li>The percentage for each county will equal 200% because the percentages are calculated by party.</li>
-    </ul>
-    <li>How many Republican and Democratic candidates recieved votes in the primaries respectively?</li>
-    <ul>
-      <li>Republican's recieved nearly 30 million votes with Donald Trump recieving 14 million.<br>The Democrats also recieved 30 million votes with Hillary Clinton recieving 17 million votes.</li>
-    </ul>
-    <li>Do independents get votes in the primaries?</li>
-    <ul>
-      <li>No, only candidates from the two main parties, Republican and Democratic, are voted for during the primary elections.</li>
-    </ul>
-    <li>What is the difference between no preference and uncommited votes?</li>
-    <ul>
-      <li>No preference is chosen when an electorate decides not to vote on that issue/candidate while uncommited has no dara in this data set and is useless.</li>
-    </ul>
-    <li>Why do North Dakota and Colorado have no data for republicans?</li>
-    <ul>
-      <li>The GOP (Republican party) decided not to hold a vote in either of those states and instead held a party meeting to determin their delegate votes.</li>
-    </ul>
-  </ol>
-</div>
-{% endblock %}
+  <div id=content>
+    <p>
+      <h1>County Primary Elections Project</h1>
+      <b>Description:</b> Every four years in the United States comes along a new general election where a president is elected.
+      During that process primaries and caucases are held to determine what candidate is chosen per major party.
+      This data set shows how each county in America voted for each candidate from both parties.
+      These votes come from both priamries and caucases. All the data used comes from the <a href="https://corgis-edu.github.io/corgis/json/election/">CORGIS Dataset</a>.
+    </p>
+    <ol>
+      <li>Why do the percentages of each county not equal 100%?</li>
+      <ul>
+        <li>The percentage for each county will equal 200% because the percentages are calculated by party.</li>
+      </ul>
+      <li>How many Republican and Democratic candidates recieved votes in the primaries respectively?</li>
+      <ul>
+        <li>Republican's recieved nearly 30 million votes with Donald Trump recieving 14 million.<br>The Democrats also recieved 30 million votes with Hillary Clinton recieving 17 million votes.</li>
+      </ul>
+      <li>Do independents get votes in the primaries?</li>
+      <ul>
+        <li>No, only candidates from the two main parties, Republican and Democratic, are voted for during the primary elections.</li>
+      </ul>
+      <li>What is the difference between no preference and uncommited votes?</li>
+      <ul>
+        <li>No preference is chosen when an electorate decides not to vote on that issue/candidate while uncommited has no dara in this data set and is useless.</li>
+      </ul>
+      <li>Why do North Dakota and Colorado have no data for republicans?</li>
+      <ul>
+        <li>The GOP (Republican party) decided not to hold a vote in either of those states and instead held a party meeting to determin their delegate votes.</li>
+      </ul>
+    </ol>
+  </div>
+  {% endblock %}
