--- a/static/Css.css
+++ b/static/Css.css
@@ -1,16 +1,19 @@
 #content {
-  padding: 20px;
+  margin-left: 20%;
+  margin-right: 20%;
+  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+
 }
 
 h1 {
   text-align: center;
+  font-family: Tahoma, Verdana, Segoe, sans-serif;
 }
 
 p {
-  width: 33%;
+
 }
 
 body {
-  background-color: coral;
-  /* This is not working for some really annoying reason that bootstrap overides the body tag or something rgb(255,245,255)*/
-}
+  background-color: rgb(255,245,255);
+  }
