--- a/templates/Political_Demographic_Layout.html
+++ b/templates/Political_Demographic_Layout.html
@@ -11,8 +11,8 @@
   <title>{% block title %}{% endblock %} - My Webpage</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="Static/Css.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link href="static/Css.css" rel="stylesheet">
 
 </head>
 
