--- a/templates/Political_Demographic_Layout.html
+++ b/templates/Political_Demographic_Layout.html
@@ -27,7 +27,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+        <li class="nav-item {% if active_page == "Political_Demographic_Dropdown" %} active {% endif %}"><a class="nav-link" href="/StateCounty">Dropdown</a></li>
+        
+         <!-- <li class="nav-item {% if active_page == "atm_torr" %} active {% endif %}"><a class="nav-link" href="/pressure">Pressure</a></li>
+         <li class="nav-item {% if active_page == "gal_lit" %} active {% endif %}"><a class="nav-link" href="/volume">Volume</a></li> -->
+
+          <!-- <li class="nav-item active">
             <a class="nav-link" href="#">Home
               <span class="sr-only">(current)</span>
             </a>
@@ -40,7 +45,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Page 3</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
