--- a/templates/Political_Demographic_Layout.html
+++ b/templates/Political_Demographic_Layout.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
         <li class="nav-item {% if active_page == "Political_Demographic_Dropdown" %} active {% endif %}"><a class="nav-link" href="/StateCounty">Dropdown</a></li>
-        
+
          <!-- <li class="nav-item {% if active_page == "atm_torr" %} active {% endif %}"><a class="nav-link" href="/pressure">Pressure</a></li>
          <li class="nav-item {% if active_page == "gal_lit" %} active {% endif %}"><a class="nav-link" href="/volume">Volume</a></li> -->
 
@@ -56,8 +56,9 @@
 
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.slim.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
 </body>
 
