--- a/templates/Political_Demographic_Dropdown.html
+++ b/templates/Political_Demographic_Dropdown.html
@@ -31,6 +31,52 @@ var num_Cand_Party = new CanvasJS.Chart("chartContainer", {
 });
 num_Cand_Party.render();
 
+
+var votingData = {
+"Voting Party Demographic": [{
+		click: visitorsChartDrilldownHandler,
+		cursor: "pointer",
+		explodeOnClick: false,
+		innerRadius: "75%",
+		legendMarkerType: "square",
+		name: "Voting Party Demographic",
+		radius: "100%",
+		showInLegend: true,
+		startAngle: 90,
+		type: "doughnut",
+		dataPoints: [
+		{ y: {{demNumVote}}, label: "Democrats", color: "#0000ff" },
+		{ y: {{repNumVote}}, label: "Republicans", color: "#ff0000" },
+		{ y: {{NumVote}}, label: "N/A", color: "#b4b4b4" }
+		]
+	}],
+	"Democrats": [{
+		color: "#0000ff",
+		name: "Democrats",
+		type: "pie",
+		dataPoints: [
+			{ x: new Date("Bernie Sanders"), y: {{bernVoteD}}, color: "#37c732"},
+			{ x: new Date("Hillary Clinton"), y: {{hillVoteD}}, color: "#43bfe6"},
+			{ x: new Date("Martin O'Malley"), y: {{martVoteD}}, color: "#4141f0" }
+		]
+	}],
+	"Republicans": [{
+		name: "Returning Visitors",
+		type: "pie",
+		dataPoints: [
+			{ x: new Date("Carly Fiorina"), y: {{carVoteR}} },
+			{ x: new Date("Chris Christie"), y: {{chrVoteR}} },
+			{ x: new Date("Donald Trump"), y: {{donVoteR}} },
+			{ x: new Date("Jeb Bush"), y: {{jebVoteR}} },
+			{ x: new Date("John Kasich"), y: {{johnVoteR}} },
+			{ x: new Date("Marco Rubio"), y: {marVoteR} },
+			{ x: new Date("Mike Huckabee"), y: {{mikeVoteR}} },
+			{ x: new Date("Rand Paul"), y: {{ranVoteR}} },
+			{ x: new Date("Rick Santorum"), y: {{rickVoteR}} },
+			{ x: new Date("Ted Cruz"), y: {{tedVoteR}} }
+		]
+	}]
+};
 var num_Vote_Party = new CanvasJS.Chart("chartContainer2", {
 	animationEnabled: true,
 	exportEnabled: true,
@@ -50,12 +96,36 @@ var num_Vote_Party = new CanvasJS.Chart("chartContainer2", {
 		]
 	}]
 });
+
+var votingPartyDemographicOptions = {
+	animationEnabled: true,
+	theme: "light2",
+	title: {
+		text: "Voting Party Demographic"
+	},
+	subtitles: [{
+		text: "Click on Any Segment to Drilldown",
+		backgroundColor: "#2eacd1",
+		fontSize: 16,
+		fontColor: "white",
+		padding: 5
+	}],
+	legend: {
+		fontFamily: "calibri",
+		fontSize: 14,
+		itemTextFormatter: function (e) {
+			return e.dataPoint.name + ": " + Math.round(e.dataPoint.y / {{allVotes}} * 100) + "%";
+		}
+	},
+	data: []
+};
+
 num_Vote_Party.render();
 
 $("#backButton").click(function() {
 	$(this).toggleClass("invisible");
 	chart = new CanvasJS.Chart("chartContainer", newVSReturningVisitorsOptions);
-	chart.options.data = visitorsData["New vs Returning Visitors"];
+	chart.options.data = visitorsData["Voting Party Demographic"];
 	chart.render();
 });
 
