--- a/templates/Political_Demographic_Layout.html
+++ b/templates/Political_Demographic_Layout.html
@@ -28,6 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
         <li class="nav-item {% if active_page == "Political_Demographic_Dropdown" %} active {% endif %}"><a class="nav-link" href="/StateCounty">Dropdown</a></li>
+        <li class="nav-item {% if active_page == "Political_Demographic_States" %} active {% endif %}"><a class="nav-link" href="/State">States</a></li>
 
          <!-- <li class="nav-item {% if active_page == "atm_torr" %} active {% endif %}"><a class="nav-link" href="/pressure">Pressure</a></li>
          <li class="nav-item {% if active_page == "gal_lit" %} active {% endif %}"><a class="nav-link" href="/volume">Volume</a></li> -->
