--- a/templates/Political_Demographic_Dropdown.html
+++ b/templates/Political_Demographic_Dropdown.html
@@ -2,7 +2,7 @@
 
 {% set active_page = "Political_Demographic_Dropdown"%}
 
-{% block title %}2016 Primary Election Drop Down{% endblock %}
+{% block title %}2016 Primary Election Dropdown{% endblock %}
 
 {% block content %}
 <script>
@@ -127,8 +127,7 @@ $("#backButton").click(function() {
     display: none;
   }
 </style>
-<html>
-<body>
+
 <form action="/StateCounty">
   <select name="candidate">
     {{candidate}}
@@ -138,8 +137,7 @@ $("#backButton").click(function() {
 </form>
 <h1>{{c}}</h1>
 <p>{{c_info}}</p>
-</body>
-</html>
+
 
 
 <div id="chartContainer" style="height: 370px; width: 50%;"></div>
