--- a/templates/Political_Demographic_Layout.html
+++ b/templates/Political_Demographic_Layout.html
@@ -29,6 +29,7 @@
         <ul class="navbar-nav ml-auto">
         <li class="nav-item {% if active_page == "Political_Demographic_Dropdown" %} active {% endif %}"><a class="nav-link" href="/StateCounty">Dropdown</a></li>
         <li class="nav-item {% if active_page == "Political_Demographic_States" %} active {% endif %}"><a class="nav-link" href="/State">States</a></li>
+        <li class="nav-item {% if active_page == "Political_Demographic_Candidates" %} active {% endif %}"><a class="nav-link" href="/Candidates">Candidates</a></li>
 
          <!-- <li class="nav-item {% if active_page == "atm_torr" %} active {% endif %}"><a class="nav-link" href="/pressure">Pressure</a></li>
          <li class="nav-item {% if active_page == "gal_lit" %} active {% endif %}"><a class="nav-link" href="/volume">Volume</a></li> -->
