--- a/templates/Political_Demographic_Intro.html
+++ b/templates/Political_Demographic_Intro.html
@@ -29,7 +29,7 @@
       </ul>
       <li>What is the difference between no preference and uncommited votes?</li>
       <ul>
-        <li>No preference is chosen when an electorate decides not to vote on that issue/candidate while uncommited has no dara in this data set and is useless.</li>
+        <li>No preference is chosen when an electorate decides not to vote on that issue/candidate while uncommited has no data in this data set and is useless.</li>
       </ul>
       <li>Why do North Dakota and Colorado have no data for republicans?</li>
       <ul>
