--- a/templates/Political_Demographic_States.html
+++ b/templates/Political_Demographic_States.html
@@ -9,6 +9,26 @@
 <script>
 window.onload = function () {
 
+var chart = new CanvasJS.Chart("chartContainer", {
+	animationEnabled: true,
+	exportEnabled: true,
+	theme: "light1", // "light1", "light2", "dark1", "dark2"
+	title:{
+		text: "Simple Column Chart with Index Labels"
+	},
+	data: [{
+		type: "column", //change type to bar, line, area, pie, etc
+		//indexLabel: "{y}", //Shows y value on all Data Points
+		indexLabelFontColor: "#5A5757",
+		indexLabelPlacement: "outside",
+		dataPoints: [
+			{{dVote}},
+      {{rVote}}
+		]
+	}]
+});
+chart.render();
+
 }
 </script>
 
@@ -29,6 +49,9 @@ window.onload = function () {
 </form>
 <h1>{{c}}</h1>
 <p>{{c_fun_fact}}</p>
+
+<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
 <style>
   h1{
